[gd_scene load_steps=17 format=3 uid="uid://durrtmu3i450r"]

[ext_resource type="Script" uid="uid://b4nuxfxo3kvlq" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://bygn7y3qpn8xs" path="res://Shaders/AllSkyFree_Sky_EpicBlueSunset_Equirect.png" id="2_fjrip"]
[ext_resource type="PackedScene" uid="uid://cdvfasjj4km5l" path="res://meshes/FishSub.fbx" id="2_qhqgy"]
[ext_resource type="Script" uid="uid://cwbxcfefm5qdj" path="res://scripts/camera.gd" id="3_qlg0r"]
[ext_resource type="PackedScene" uid="uid://cwlmu2g8odpra" path="res://scenes/pickaxe.tscn" id="4_qlg0r"]
[ext_resource type="ArrayMesh" uid="uid://dva5riw4x0j1l" path="res://meshes/SM_FishSubmarine_FINAL.obj" id="5_smehm"]
[ext_resource type="Material" uid="uid://dat2e8q6cpmmp" path="res://materials/submarine.tres" id="6_smehm"]
[ext_resource type="PackedScene" uid="uid://cv7cru1o8ec0" path="res://scenes/ak47.tscn" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://dws0iatvikhls" path="res://scripts/items/secondAk47.gd" id="9_ur7pv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7cn6r"]
height = 2.79761

[sub_resource type="Gradient" id="Gradient_qlg0r"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tuyoq"]
gradient = SubResource("Gradient_qlg0r")

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_smehm"]
panorama = ExtResource("2_fjrip")

[sub_resource type="Sky" id="Sky_ur7pv"]
sky_material = SubResource("PanoramaSkyMaterial_smehm")

[sub_resource type="Environment" id="Environment_fjrip"]
background_mode = 2
sky = SubResource("Sky_ur7pv")
ambient_light_color = Color(0.105882, 0.203922, 0.647059, 1)
fog_enabled = true
fog_light_color = Color(0.0941176, 0.180392, 0.607843, 1)
fog_density = 0.0476
fog_sky_affect = 0.39
volumetric_fog_density = 1000.0
volumetric_fog_albedo = Color(0.054902, 0.317647, 1, 1)
volumetric_fog_ambient_inject = 0.08
adjustment_color_correction = SubResource("GradientTexture1D_tuyoq")

[sub_resource type="BoxShape3D" id="BoxShape3D_qlg0r"]
size = Vector3(1, 1.13977, 1)

[node name="Player" type="CharacterBody3D" groups=["player"]]
axis_lock_linear_z = true
axis_lock_angular_z = true
motion_mode = 1
script = ExtResource("1_3vyb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.0102715, 0.129017, 0.00199914)
shape = SubResource("CapsuleShape3D_7cn6r")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18841, 5.28607)
environment = SubResource("Environment_fjrip")
script = ExtResource("3_qlg0r")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0.155944, 0)

[node name="submarine" parent="Pivot" instance=ExtResource("2_qhqgy")]
visible = false

[node name="SmFishSubmarine" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0.00037846, 0.000150717, -3.20524e-05)
mesh = ExtResource("5_smehm")
surface_material_override/0 = ExtResource("6_smehm")

[node name="Hand" type="Node3D" parent="Pivot/SmFishSubmarine"]
transform = Transform3D(4.96379, 0.600684, 0, -0.600684, 4.96379, 0, 0, 0, 5, 2.02766, -4.24867, 1.55206)

[node name="pickaxe" parent="Pivot/SmFishSubmarine/Hand" instance=ExtResource("4_qlg0r")]
transform = Transform3D(0.969579, 0.244783, 0, -0.244783, 0.969579, 0, 0, 0, 1, 0, 0, 0)

[node name="ak47_0406195124_texture" parent="Pivot/SmFishSubmarine" instance=ExtResource("6_tuyoq")]
transform = Transform3D(-2.5, 0, 2.18557e-07, 0, 2.5, 0, -2.18557e-07, 0, -2.5, 2.13988, -0.0920478, 2.07124)
visible = false

[node name="PopupSpawnPosition" type="Marker3D" parent="Pivot/SmFishSubmarine/ak47_0406195124_texture"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0282827, 0.666139, 0)

[node name="UnlockableLamp" type="SpotLight3D" parent="Pivot/SmFishSubmarine"]
transform = Transform3D(-4.37114e-08, 0.207912, -0.978148, 0, 0.978148, 0.207912, 1, 9.08811e-09, -4.27562e-08, 5.34924, 1.78326, 0.00318527)
visible = false
light_energy = 16.0
light_indirect_energy = 16.0
light_volumetric_fog_energy = 6.98
light_size = 0.121
light_specular = 3.086
shadow_normal_bias = 2.717
distance_fade_enabled = true
spot_range = 37.798
spot_angle = 28.444
spot_angle_attenuation = 2.92817

[node name="ak47_69420_texture2" parent="Pivot/SmFishSubmarine" instance=ExtResource("6_tuyoq")]
transform = Transform3D(-2.5, 0, 2.18557e-07, 0, 2.5, 0, -2.18557e-07, 0, -2.5, 2.13988, -0.0920479, -1.94479)
visible = false
script = ExtResource("9_ur7pv")

[node name="HarpoonRay" type="RayCast3D" parent="."]
transform = Transform3D(0.0432183, -0.999066, 0, 0.999066, 0.0432183, 0, 0, 0, 1, 0.84911, 0.396061, 0)

[node name="HarpoonCD" type="Timer" parent="."]
wait_time = 1.0
one_shot = true

[node name="ScatterArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.20848, 0)
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScatterArea"]
transform = Transform3D(7.99981, 0.0550123, 0, -0.0550123, 7.99981, 0, 0, 0, 8, 0.0548361, -1.6927, 0.0304167)
shape = SubResource("BoxShape3D_qlg0r")
debug_color = Color(0.864206, 0.357529, 1.92523e-07, 0.42)

[node name="PopupSpawnPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.153614, 0.666139, 0)

[connection signal="section_changed" from="." to="Camera3D" method="change_section_environment"]
[connection signal="timeout" from="HarpoonCD" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="ScatterArea" to="." method="scatter_area_entered"]
